--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="slash">/</string>
     <string name="previous">이전</string>
     <string name="next">다음</string>
+    <string name="submit">제출</string>
 </resources>
