--- a/feature/onboard/src/main/res/values/strings.xml
+++ b/feature/onboard/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="know_all_about_concepts">전부 아는 개념이에요! \uD83D\uDE06</string>
 
     <!--Preview-->
-    <string name="failed_to_get_test">시험 목록을 가져오지 못했습니다.</string>
-    <string name="failed_to_submit_test">시험 제출을 실패했습니다.</string>
+    <string name="failed_get_test">시험 목록을 가져오지 못했습니다.</string>
+    <string name="failed_submit_test">시험 제출을 실패했습니다.</string>
+    <string name="failed_submit_test_problems_remain">해결되지 않은 문제가 있습니다!</string>
 
 </resources>
