--- a/feature/sign/src/main/res/values/strings.xml
+++ b/feature/sign/src/main/res/values/strings.xml
@@ -2,11 +2,16 @@
     <!--Viewmodel-->
     <string name="empty" />
     <string name="email_auth_sent">인증번호를 메일로 전송하였습니다.</string>
+    <string name="email_auth_sent_fail">인증번호 전송을 실패했습니다.</string>
+    <string name="id_cannot_be_used">사용 불가능한 아이디입니다.</string>
+    <string name="id_can_be_used">사용 가능한 아이디입니다.</string>
     <string name="user_name_is_short">이름은 두글자 이상입니다</string>
     <string name="email_auth_num_is_different">인증번호가 다르게 입력되었어요</string>
+    <string name="email_auth_time_has_expired">인증 시간이 만료되었습니다</string>
     <string name="please_enter_id">아이디를 입력해주세요</string>
-    <string name="password_cannot_be_used">사용할 수 없는 비밀번호 입니다.</string>
-    <string name="password_is_incorrect">비밀번호가 맞지 않아요</string>
+    <string name="please_check_email_again">이메일을 다시 확인해 주세요.</string>
+    <string name="pw_warning">영문, 숫자, 특수 문자를 조합하여 8~16자로 입력해 주세요.</string>
+    <string name="password_is_incorrect">비밀번호가 일치하지 않습니다.</string>
     <string name="id_duplication_check_failed">아이디 중복검사를 실패했습니다.</string>
 
     <!--ScreenTitle-->
