--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="previous">이전</string>
     <string name="next">다음</string>
     <string name="submit">제출</string>
+    <string name="submit_warning_title">제출하시겠습니까?</string>
+    <string name="submit_warning_sub_title">확인 버튼을 누르면 다시 돌아올 수 없어요.</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+
 </resources>
