--- a/feature/onboard/src/main/res/values/strings.xml
+++ b/feature/onboard/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="failed_submit_test">시험 제출을 실패했습니다.</string>
     <string name="failed_submit_test_problems_remain">해결되지 않은 문제가 있습니다!</string>
 
+    <!--TestEndWarningDialog-->
+    <string name="test_end_warning_title">프리뷰 테스트를 종료하시겠습니까?</string>
+    <string name="test_end_warning_sub_title">진행중인 내용은 저장되지 않으며,\n홈화면에서 다시 응시 가능합니다.</string>
+    <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
+
 </resources>
