[feat/#29] 도넛차트 공용컴포넌트 + 프리뷰 결과 도넛차트 컴포넌트

--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
 
+    <!--TestResult-->
+    <string name="test_result_score">%1$s점</string>
 </resources>
