--- a/feature/onboard/src/main/res/values/strings.xml
+++ b/feature/onboard/src/main/res/values/strings.xml
@@ -24,4 +24,11 @@
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
 
+    <!--PreviewResult-->
+    <string name="test_result">시험 결과</string>
+    <string name="test_result_title_user_name">%1$s님의\n</string>
+    <string name="test_result_title_tail">프리뷰 결과에요!</string>
+    <string name="test_result_expected_score">예상 점수</string>
+    <string name="test_result_score">%1$s점</string>
+
 </resources>
