[refactor#29] TestResultDonutChartCard chartTitle 부분 수정

--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
 
     <!--TestResult-->
     <string name="test_result_score">%1$s점</string>
+    <string name="low_score">점수 미달</string>
 </resources>
