--- a/feature/sign/src/main/res/values/strings.xml
+++ b/feature/sign/src/main/res/values/strings.xml
@@ -87,4 +87,13 @@
     <string name="sign_up_password_page_button_text">가입하기</string>
     <string name="sign_up_password_page_hint">비밀번호 입력 (영문/숫자 조합 8~10자)</string>
     <string name="sign_up_password_page_hint_check">비밀번호 확인</string>
+    
+    <!-- Password -->
+    <string name="password_format">대문자/소문자/숫자/특수문자 포함</string>
+    <string name="password_length">8자 이상 16자 이하(공백 제외)</string>
+    <string name="reset_password_title">비밀번호 재설정</string>
+    <string name="reset_password_message">새롭게 사용할 비밀번호를 설정해 주세요.</string>
+    <string name="reset_password_hint">새 비밀번호 입력</string>
+    <string name="reset_password_confirm_hint">새 비밀번호 재입력</string>
+    <string name="passwords_do_not_match">비밀번호가 다릅니다. 동일한 비밀번호를 입력해 주세요.</string>
 </resources>
