--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="confirm">확인</string>
 
     <!--TestResult-->
+    <string name="total_score">총 점수</string>
+    <string name="expected_score">예측 점수: %1$s점</string>
     <string name="test_result_score">%1$s점</string>
     <string name="low_score">점수 미달</string>
 </resources>
