--- a/core/ui/common/src/main/res/values/strings.xml
+++ b/core/ui/common/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
 <resources>
     <string name="network_error_occurs">네트워크 오류 발생</string>
-    <string name="network_error_please_try_again">인터넷에 연결되어 있지 않는 것 같습니다. \n 다시 시도해 주세요.</string>
+    <string name="network_error_please_try_again">인터넷에 연결되어 있지 않는 것 같습니다.\n 다시 시도해 주세요.</string>
 
     <string name="server_error_occurs">서버 오류 발생</string>
     <string name="server_error_please_try_again">문제가 발생했습니다. 다시 시도해 주세요.</string>
 
     <string name="error_occurs">오류 발생</string>
     <string name="unknown_error_occurs">알 수 없는 오류가 발생하였습니다.</string>
+
+    <string name="internet_connection_is_unstable">인터넷 연결이 불안정해요.</string>
+    <string name="check_network_and_try_again">Wi-Fi나 셀룰러 데이터 연결 상태를\n확인하고 다시 시도해주세요.</string>
+
+    <string name="retry">재시도</string>
+
 </resources>
