--- a/feature/sign/src/main/res/values/strings.xml
+++ b/feature/sign/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
 
     <!--SignUpNamePage-->
     <string name="sign_up_name_page_title">이름을 입력해주세요!</string>
-    <string name="sign_up_name_page_sub_title">가입을 위해 실명을 입력해주세요.</string>
+<!--    <string name="sign_up_name_page_sub_title">가입을 위해 실명을 입력해주세요.</string>-->
     <string name="sign_up_name_page_button_text">다음</string>
     <string name="sign_up_name_page_hint">이름을 입력</string>
 
@@ -67,7 +67,7 @@
     <string name="sign_up_email_page_hint">이메일 입력</string>
 
     <!-- SignUpAuthPage -->
-    <string name="sign_up_auth_page_title">이메일로 받은\n인증번호를 입력해주세요</string>
+    <string name="sign_up_auth_page_title">본인확인을 위해\n이메일을 인증해 주세요.</string>
     <string name="sign_up_auth_page_sub_title">메일 수신함에서 인증번호를 확인해주세요</string>
     <string name="sign_up_auth_page_button_text">다음</string>
     <string name="sign_up_auth_page_hint">인증번호 6자리 입력</string>
@@ -76,14 +76,14 @@
 
     <!-- SignUpIdPage -->
     <string name="sign_up_id_page_title">아이디를 입력해주세요!</string>
-    <string name="sign_up_id_page_sub_title">사용할 아이디를 입력해주세요</string>
+<!--    <string name="sign_up_id_page_sub_title">사용할 아이디를 입력해주세요</string>-->
     <string name="sign_up_id_page_button_text">다음</string>
     <string name="sign_up_id_page_hint">아이디 입력</string>
     <string name="sign_up_id_page_check_duplicate">중복확인</string>
 
     <!-- SignUpPasswordPage -->
     <string name="sign_up_password_page_title">비밀번호를 입력해주세요!</string>
-    <string name="sign_up_password_page_sub_title">사용할 비밀번호를 입력해주세요</string>
+<!--    <string name="sign_up_password_page_sub_title">사용할 비밀번호를 입력해주세요</string>-->
     <string name="sign_up_password_page_button_text">가입하기</string>
     <string name="sign_up_password_page_hint">비밀번호 입력 (영문/숫자 조합 8~10자)</string>
     <string name="sign_up_password_page_hint_check">비밀번호 확인</string>
