[refactor] 홈 화면 Base UI 디테일 변경 (padding, blur, modifier)

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="concepts_to_learn">학습해야 하는 개념은</string>
     <string name="go_to_study">학습하러 가기</string>
     <string name="weekly_custom_concept">주간 맞춤 개념</string>
-    주간 맞춤 개념
+    <string name="weekly_recommend_concept">주간 추천 개념</string>
 </resources>
