--- a/feature/onboard/src/main/res/values/strings.xml
+++ b/feature/onboard/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <!--Survey-->
     <string name="know_nothing_about_concepts">모든 개념을 처음 봐요 \uD83D\uDE05</string>
     <string name="know_all_about_concepts">전부 아는 개념이에요! \uD83D\uDE06</string>
+    <string name="test_level_adjusted_notice">체크하신 결과를 토대로\n추후 진행할 테스트의 레벨이 조정됩니다!</string>
+    <string name="check_known_concepts_prompt">아는 개념을 체크해주세요!</string>
+    <string name="submit_fail">설문 제출에 실패하였습니다.</string>
 
     <!--Preview-->
     <string name="failed_get_test">시험 목록을 가져오지 못했습니다.</string>
