[ui/#45] empty string resource 선언

--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="cancel">취소</string>
     <string name="confirmation">확인</string>
+    <string name="empty"/>
 </resources>
