--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="exam_countdown_message">%1$s 님이 등록한\n시험까지</string>
     <string name="exam_register_message">%1$s 님의\n시험 일정을 등록해보세요!</string>
+    <string name="exam_date_expired">앗,\n등록했던 시험일이 지났어요.</string>
+    <string name="re_register_schedule">시험 일정을 재등록해 주세요.</string>
     <string name="change">변경하기</string>
     <string name="register">등록하기</string>
     <string name="change_schedule_prompt">일정을 변경할까요?</string>
