--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="schedule_is_empty">시험 일정이 아직 나오지 않았어요</string>
     <string name="schedule_is_not_registered">공식 홈페이지에 등록된 시험일정이 없습니다.</string>
     <string name="to_home">홈으로 가기</string>
+    <string name="success_to_apply_exam">시험일정을 등록했어요!</string>
 </resources>
