--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -16,12 +16,18 @@
     <string name="prepare_like_real_exam">실전처럼 준비하기</string>
     <string name="today_s_study">오늘의 공부</string>
     <string name="preview_test_open">프리뷰 시험을 보면 열려요!</string>
-    <string name="concepts_to_learn">학습해야 하는 개념은</string>
+    <string name="comprehensive_review">종학복습 시간!</string>
+    <string name="comprehensive_review_description">지금까지의 정답률을 토대로 부족한 부분의\n개념을 복습하는 날입니다.</string>
     <string name="go_to_study">학습하러 가기</string>
+    <string name="go_to_review">복습하러 가기</string>
+    <string name="review_concept">복습해야하는 개념 </string>
+    <string name="study_concept">학습해야하는 개념 </string>
     <string name="weekly_custom_concept">주간 맞춤 개념</string>
     <string name="weekly_recommend_concept">주간 추천 개념</string>
     <string name="schedule_is_empty">시험 일정이 아직 나오지 않았어요</string>
     <string name="schedule_is_not_registered">공식 홈페이지에 등록된 시험일정이 없습니다.</string>
+    <string name="importance_level">출제율 %s</string>
     <string name="to_home">홈으로 가기</string>
     <string name="success_to_apply_exam">시험일정을 등록했어요!</string>
+    <string name="error_occurred">오류가 발생했습니다.</string>
 </resources>
