--- a/feature/daily-study/src/main/res/values/strings.xml
+++ b/feature/daily-study/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="go_to_result">학습 완료된 테스트를 누르면 결과 화면으로 넘어갑니다.</string>
     <string name="test_retry">시험을 다시 보겠습니까?</string>
     <string name="test_already_taken_warning">이미 한번 봤던 시험입니다.\n만약 미달인 경우 재시험의 기회가 없습니다.</string>
+    <string name="cancel_test">시험 취소</string>
+    <string name="cancel_test_warning">취소하면 지금까지 풀이 내역을 모두 잃어버리게 됩니다.</string>
+    <string name="continue_test">계속하기</string>
+    <string name="cancel">취소하기</string>
+    <string name="confirm_submit">제출하시겠습니까?</string>
+    <string name="submit_warning">확인 버튼을 누르면 다시 돌아올 수 없어요.</string>
 </resources>
