--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="concept_score_analysis">개념별 점수 분석</string>
     <string name="total">전체</string>
     <string name="show_score_detail">상세 보기</string>
+    <string name="cancel_test">시험 취소</string>
+    <string name="cancel_test_warning">취소하면 지금까지 풀이 내역을 모두 잃어버리게 됩니다.</string>
+    <string name="continue_test">계속하기</string>
 </resources>
