--- a/core/ui/test/src/main/res/values/strings.xml
+++ b/core/ui/test/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="cancel_test">시험 취소</string>
     <string name="cancel_test_warning">취소하면 지금까지 풀이 내역을 모두 잃어버리게 됩니다.</string>
     <string name="continue_test">계속하기</string>
+    <string name="expected_score_tooltip_title">예측점수란?</string>
+    <string name="expected_score_tooltip_content">출제 경향을 반영한 가중치를 적용하여,\n예상한 점수입니다.\n\n* 실제 시험에서는 난이도나 변동 요소에 따라\n점수가 달라질 수 있습니다.</string>
 </resources>
