[feat/#44] 오답노트 상세 화면 구현

--- a/core/ui/common/src/main/res/values/strings.xml
+++ b/core/ui/common/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="exam_application_period">접수기간: %s</string>
     <string name="schedule_is_empty">시험 일정이 아직 나오지 않았어요</string>
     <string name="schedule_is_not_registered">공식 홈페이지에 등록된 시험일정이 없습니다.</string>
+    <string name="go_to_study">학습하러 가기</string>
 
 </resources>
