--- a/feature/clip/src/main/res/values/strings.xml
+++ b/feature/clip/src/main/res/values/strings.xml
@@ -8,13 +8,20 @@
     <string name="only_incorrect">오답만</string>
     <string name="subject_1">1과목</string>
     <string name="subject_2">2과목</string>
+    <string name="subject_number">%1$d과목</string>
     <string name="select_all">전체 선택</string>
     <string name="deselect_all">전체 해제</string>
     <string name="reset">초기화</string>
     <string name="apply">적용하기</string>
-    <string name="question">질문</string>
+    <string name="question">문제</string>
+    <string name="explanation">풀이</string>
+    <string name="answer_number">정답: %1$d번</string>
+    <string name="my_checked_option">내가 고른 답: %1$d번</string>
+    <string name="solution">내용에 대한 주제</string>
+    <string name="key_concepts">활용된 개념</string>
     <string name="tag_1">태그1</string>
     <string name="tag_2">태그2</string>
+    <string name="question_number">문제 %1$d</string>
     <string name="error_load_clip_days">날짜 목록을 불러오는데 실패했습니다.</string>
     <string name="error_load_clip_sessions">세션 목록을 불러오는데 실패했습니다.</string>
     <string name="error_load_daily_clips">오답노트를 불러오는데 실패했습니다.</string>
